# atllashabita

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml  package.json  requirements.txt  vercel.json
.github/: CODEOWNERS  dependabot.yml  (+1 more)
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/src/atlashabita/: __init__.py
apps/api/src/atlashabita/application/: __init__.py  _stub.py  container.py  scoring.py
apps/api/src/atlashabita/application/use_cases/: __init__.py  compute_rankings.py  export_rdf.py  get_map_layer.py  get_quality_report.py  get_territory_detail.py  list_accidents.py  list_map_layers.py  list_mobility.py  list_profiles.py  list_sources.py  list_transit.py  run_sparql_query.py  search_territories.py
apps/api/src/atlashabita/config/: __init__.py  settings.py
apps/api/src/atlashabita/domain/: __init__.py  accidents.py  indicators.py  mobility.py  profiles.py  scoring.py  sources.py  territories.py  transit.py
apps/api/src/atlashabita/infrastructure/: __init__.py
apps/api/src/atlashabita/interfaces/: __init__.py
apps/api/src/atlashabita/observability/: __init__.py  errors.py  logging.py  middleware.py  tracing.py
apps/api/tests/: conftest.py  test_api_cache.py  test_api_middleware.py  test_api_routers_accidents.py  test_api_routers_map_layers.py  test_api_routers_mobility.py  test_api_routers_profiles.py  test_api_routers_quality.py  test_api_routers_rankings.py  test_api_routers_rdf_export.py  test_api_routers_sources.py  test_api_routers_sparql.py  test_api_routers_territories.py  test_api_routers_transit.py  test_data_normalizer.py  test_data_quality.py  test_dataset_builder.py  test_dataset_builder_extended.py  test_domain_models.py  test_domain_territories.py  test_errors.py  test_export_rdf.py  test_fuseki_runner.py  test_health.py  test_ingestion_crtm.py  test_ingestion_dgt.py  test_ingestion_downloader.py  test_ingestion_ine_api.py  test_ingestion_ine_atlas_renta.py  test_ingestion_ine_dirce.py  test_ingestion_miteco.py  test_ingestion_mitma.py  test_rdf_accidents.py  test_rdf_geometry.py  test_rdf_graph_builder.py  test_rdf_manifest.py  test_rdf_mobility.py  test_rdf_provenance.py  test_rdf_serializer.py  test_rdf_shacl.py  (+22 more)
apps/api/tests/fixtures/ingestion/: crtm_gtfs.json  dgt_accidentes.csv  ine_api_population.json  ine_atlas_renta.json  ine_dirce.json  miteco_demographic.json  miteco_services.json  mitma_movilidad.json
(+363 files in other folders)
